--- a/webroot/scss/_v_settings.scss
+++ b/webroot/scss/_v_settings.scss
@@ -37,7 +37,7 @@ $include-html-global-classes: $include-html-classes;
 // $include-html-grid-classes: $include-html-classes;
 // $include-xl-html-grid-classes: false;
 
-$row-width: rem-calc(1200);
+//$row-width: rem-calc(1200);
 // $total-columns: 12;
 
 // Global
