--- a/webroot/scss/vendor.scss
+++ b/webroot/scss/vendor.scss
@@ -599,3 +599,20 @@ span.inactive { opacity: 0;}
     }
   }
 }
+
+#loading-screen {
+width:100%;
+height:100%;
+top:0;
+left:0;
+positioned:fixed;
+z-index:999999999999;
+background-color:rgb(51, 63, 70);
+  #loading-screen-message {
+    background-color: transparent;
+    h2 { color: $white;}
+    text-align: center;
+    border:none;
+    box-shadow:none;
+  }
+}
