--- a/webroot/scss/app.scss
+++ b/webroot/scss/app.scss
@@ -18,7 +18,7 @@
 @import "templates/modals"; // 9999
 @import "templates/loading_screen"; // 9999
 @import "templates/splash"; // 9000-series
-@import "templates/main";   // 8000-series
+//@import "templates/main";   // 8000-series
 @import "templates/menu";   // 8000-series
 @import "templates/orb_card_stage";   // 8000-series
 @import "templates/orb_card_stage_menu";   // 8000-series
