--- a/webroot/scss/templates/modals.scss
+++ b/webroot/scss/templates/modals.scss
@@ -16,6 +16,7 @@
   display:inline-block;
   margin:0.5rem;
 }
+
 #load-dot-1 { -webkit-animation : modal_loading_dots 1s ease-in-out infinite normal 0s running forwards;}
 #load-dot-2 { -webkit-animation : modal_loading_dots 1s ease-in-out infinite normal 0.25s running forwards;}
 #load-dot-3 { -webkit-animation : modal_loading_dots 1s ease-in-out infinite normal 0.5s running forwards;}
@@ -78,11 +79,12 @@
 }
 
 #primary-modal {
-  * { color : $text-grey; }
+  color : $text-grey;
   position           : fixed;
   top                : 0;
   left               : 0;
   border             : $float-pane-border-width solid $white;
+  box-shadow: 0px 0px 32px $black-a50;
   -webkit-transition : transform $global-transition-time, height $global-transition-time;
   @include primary-modal-bg;
   min-width          : 600px;
@@ -93,11 +95,13 @@
   overflow-x         : hidden;
   overflow-y         : auto;
   padding            : $base-padding;
+  a, * a { color: $text-grey;}
   input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="week"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], textarea {
     padding       : $tight-padding;
     padding-top   : $medium-padding;
     margin-bottom : $tight-padding;
   }
+  h1, h2, h3, h4, h5 { color: $text-grey;}
 
   select, select option { @include HelveticaLtCn; }
   div.modal-header {
@@ -452,4 +456,41 @@ p {
 
 div.modal-nav {
   margin-top:$base-padding;
+}
+
+
+// USER ADDRESS CARDS
+div.address-row {
+  @include HelveticaMdCn;
+  background-color: $white-a50;
+  border-radius: $global-radius;
+  box-shadow: 0px 0px 8px $black-a25;
+  padding: $base-padding;
+  &:hover {
+    background-color: $xtreme-yellow;
+  }
+   ul.address {
+      height: $address-card-list-height;
+      padding-bottom: $medium-padding;
+      margin-bottom: $medium-padding;
+      border-bottom: 1px dotted $light-grey;
+       li {
+         font-size: rem-calc(12px);
+         line-height: rem-calc(16px);
+         heigh: $address-card-row-height;
+       }
+       li.building-type {
+         text-align: center;
+         background-color: $text-grey;
+         color: $white !important;
+       }
+   }
+   p.note {
+     height:$address-card-note-height;
+     font-size:rem-calc(12px);
+     line-height: rem-calc(14px);
+   }
+  div.links {
+    padding: $base-padding;
+  }
 }
