--- a/webroot/scss/vendor.scss
+++ b/webroot/scss/vendor.scss
@@ -365,7 +365,7 @@ display:none !important;
       font-size : .75rem;
     }
   }
-  &.grey-on-white {
+  &.grey-scale {
     background-color:$white;
     span { color: $text-grey !important; }
     &:hover {
